--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <input type="password" id="password" placeholder="Senha do usuário com sudo (ex: aluno)" value="qwe123">
                         </div>
 
-                        <details id="collapsible-actions-main" class="input-group collapsible-section" open>
+                        <details id="collapsible-actions-main" class="input-group collapsible-section">
                             <summary class="collapsible-summary">
                                 <span>Ações</span>
                                 <span class="collapsible-indicator">[+]</span>
@@ -121,7 +121,7 @@
                                         </div>
                                         <div class="input-group hidden" id="wallpaper-group">
                                             <label for="wallpaper-file" class="sr-only">Selecione a imagem do papel de parede</label>
-                                            <input type="file" id="wallpaper-file" accept="image/png, image/jpeg, image/jpg">
+                                            <input type="file" id="wallpaper-file" accept="image/*">
                                         </div>
                                     </div>
                                 </details>
