--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                                         <div class="checkbox-item"><input type="checkbox" id="action-remover_nemo" name="action" value="remover_nemo"><label for="action-remover_nemo">Remover Nemo (Gerenciador de Arquivos)</label></div>
                                         <div class="checkbox-item"><input type="checkbox" id="action-instalar_nemo" name="action" value="instalar_nemo"><label for="action-instalar_nemo">Instalar Nemo e Cinnamon</label></div>
                                         <div class="checkbox-item"><input type="checkbox" id="action-desinstalar_scratchjr" name="action" value="desinstalar_scratchjr"><label for="action-desinstalar_scratchjr">Desinstalar ScratchJR</label></div>
+                                        <div class="checkbox-item"><input type="checkbox" id="action-instalar_scratchjr" name="action" value="instalar_scratchjr"><label for="action-instalar_scratchjr">Instalar ScratchJR</label></div>
                                     </div>
                                 </details>
                                 <details id="collapsible-group-interface" class="collapsible-fieldset group-interface">
