--- a/index.html
+++ b/index.html
@@ -154,12 +154,10 @@
                                     <input type="search" id="ip-search-input" placeholder="🔎 Pesquisar...">
                                 </div>
                                 <div class="ip-export">
-                                    <button type="button" id="export-ips-btn" class="small-btn" title="Exportar IPs visíveis para .txt">Exportar</button>
+                                    <button type="button" id="export-ips-btn" class="small-btn" title="Exportar IPs visíveis para .txt" disabled>Exportar</button>
                                 </div>
                             </div>
-                            <div id="ip-list">
-                                <!-- IPs serão carregados aqui pelo JavaScript -->
-                            </div>
+                            <div id="ip-list" class="ip-list-container"><!-- IPs serão carregados aqui pelo JavaScript --></div>
                         </section>
 
                         <section id="progress-section" class="hidden">
