--- a/grid_view.html
+++ b/grid_view.html
@@ -2,8 +2,8 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visualização em Grade</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+    <title>Visualização em Grade (VNC)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
@@ -80,7 +80,7 @@
 <body class="grid-body">
     <header class="grid-header">
         <h1>Visualização em Grade</h1>
-        <label for="fit-toggle" class="fit-toggle">
+        <label for="fit-toggle" class="fit-toggle" title="Alterna entre o tamanho real e o ajuste da imagem à janela">
             <input type="checkbox" id="fit-toggle">
             <span>Ajustar à Tela</span>
         </label>
