--- a/grid_view.html
+++ b/grid_view.html
@@ -13,11 +13,11 @@
         body { font-family: 'Inter', sans-serif; background-color: var(--bg-color); color: var(--text-color); display: flex; flex-direction: column; }
         .grid-header { padding: 0.75rem 1.5rem; display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid var(--border-color); flex-shrink: 0; }
         .grid-header h1 { margin: 0; font-size: 1.25rem; }
+        .header-controls { display: flex; align-items: center; gap: 1.5rem; }
         .fit-toggle { display: flex; align-items: center; gap: 0.5rem; cursor: pointer; }
         .fit-toggle input { cursor: pointer; }
         #grid-container {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
             gap: 0.75rem;
             padding: 0.75rem;
             overflow-y: auto;
@@ -67,30 +67,51 @@
         .grid-item-header .status { flex-shrink: 0; /* Impede que o ícone de status seja espremido */ }
         .grid-item-body {
             position: relative;
-            padding-top: 75%; /* Proporção 4:3 */
             flex-grow: 1;
             background-color: #000; /* Fundo preto para letterboxing */
+            /* Nova abordagem para manter a proporção 4:3, mais moderna e compatível com iframes. */
+            aspect-ratio: 4 / 3;
         }
-        .grid-item-body canvas { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+        /* O iframe agora é posicionado absolutamente para preencher o contêiner. */
+        .grid-item-body iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
         .loading::after { content: '🔄'; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 2rem; animation: spin 1.5s linear infinite; }
         .error::after { content: '❌'; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 2rem; }
         @keyframes spin { from { transform: translate(-50%, -50%) rotate(0deg); } to { transform: translate(-50%, -50%) rotate(360deg); } }
+    </style>
+    <style>
+        /* Estilos para o novo console de log */
+        #grid-log-console {
+            position: fixed; bottom: 0; left: 0; right: 0; height: 150px; background-color: #16161e; border-top: 1px solid var(--border-color);
+            padding: 0.5rem; overflow-y: auto; font-family: monospace; font-size: 0.8rem; color: #7aa2f7; z-index: 100;
+        }
+        #grid-log-console div { padding: 2px 0; border-bottom: 1px solid #24283b; }
+        #grid-log-console .log-error { color: #f7768e; }
+        .hidden { display: none !important; }
     </style>
 </head>
 <body class="grid-body">
     <header class="grid-header">
         <h1>Visualização em Grade</h1>
-        <label for="fit-toggle" class="fit-toggle" title="Alterna entre o tamanho real e o ajuste da imagem à janela">
-            <input type="checkbox" id="fit-toggle">
-            <span>Ajustar à Tela</span>
-        </label>
+        <div class="header-controls">
+            <label for="log-toggle" class="fit-toggle" title="Mostra ou oculta o console de log de depuração">
+                <input type="checkbox" id="log-toggle">
+                <span>Visualizar Log</span>
+            </label>
+            <label for="fit-toggle" class="fit-toggle" title="Alterna entre o tamanho real e o ajuste da imagem à janela">
+                <input type="checkbox" id="fit-toggle">
+                <span>Ajustar à Tela</span>
+            </label>
+        </div>
     </header>
 
     <div id="grid-container" role="main">
         <!-- As pré-visualizações serão inseridas aqui pelo JavaScript -->
     </div>
 
+    <!-- Novo console de log para depuração -->
+    <div id="grid-log-console"></div>
+
     <!-- Importação da biblioteca noVNC e do nosso script -->
-    <script src="grid_view.js" type="module"></script>
+    <script src="grid_view.js"></script>
 </body>
 </html>
